@@ -1,3 +1,5 @@
+* Use One2Many for analytic accounts
+
 Version 3.4.0 - 2014-10-20
 * Bug fixes (see mercurial logs for details)
 
